# cactus

./: .gitignore  .pylintrc  README.md  env.dist  makefile  manage.py  pyproject.toml
.github/workflows/: integration.yml  makefile.yml
FinanceTracker/: asgi.py  settings.py  urls.py  wsgi.py
account/: forms.py  urls.py  views.py
cactus/: asgi.py  settings.py  urls.py  wsgi.py
home/: apps.py  urls.py  views.py
sources/account/: admin.py  apps.py  forms.py  urls.py  views.py
sources/account/migrations/: 0001_model_access.py  0002_alter_desiredrequiredsaving_required.py  0003_alter_desiredrequiredsaving_contribution_and_more.py  0004_alter_dailyspending_alcohol_and_more.py  0005_update_user_fields.py
sources/account/models/: daily_spending.py  desired_non_req_spending.py  desired_required_spending.py  desired_saving.py  income.py  user_account.py
sources/data/: apps.py
sources/home/: apps.py  urls.py  views.py
static/css/: style.css
static/js/: bar.js
templates/account/: account.html  create_account.html  login.html
templates/home/: home.html
templates/includes/: base.html  content-box.html  error-box.html  footer.html  message-box.html  navbar.html  sidebar.html
templates/svgs/: calendar.html  daily.html  graph.html  heart.html  profile.html  settings.html  task.html
