[tool.poetry]
name = "cactus"
version = "0.1.0"
description = ""
authors = ["Nolan Gregory <65730528+nulzo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
django-bootstrap5 = "^23.3"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-bootstrap-v5 = "^1.0.11"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
coverage = "^7.2.7"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
pylint = "^2.17.5"
yapf = "^0.40.1"
autoflake = "^2.2.0"

[tool.black]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
